# CPP_Practise

./: ATM.cpp  Account.cpp  Transaction.cpp  User.cpp  User.hpp  card.cpp  card.hpp
GMock/: calculator.cpp  calculator.h  calculator_cli  calculator_cli.cpp  calculator_test.cpp
GMockGTest/: CMakeLists.txt
GMockGTest/Build2/: CMakeCache.txt  CTestTestfile.cmake  CalculatorApp  DartConfiguration.tcl  Makefile  cmake_install.cmake
GMockGTest/include/: Calculator.hpp
GMockGTest/src/: CalculatorAPP.cpp  main.cpp
GMockGTest/unittest/: CalculatorTest.cpp
LLD/: testLLD.cpp
LLD/ParkingLOT/: AllFiles.bat  CMakeLists.txt  Makefile.mk  ParkingAdmin.cpp  ParkingAdmin.hpp  ParkingAttendant.cpp  ParkingAttendant.hpp  ParkingDisplayDashboard.cpp  ParkingDisplayDashboard.hpp  ParkingLot.cpp  ParkingLot.hpp  ParkingManager.cpp  ParkingManager.hpp  ParkingSlot.cpp  ParkingSlot.hpp  ParkingSlotFactory.cpp  Payment.cpp  Payment.hpp  Ticket.cpp  Ticket.hpp  Vehicle.cpp  Vehicle.hpp  combined.txt  main.cpp  parking_management
LeetCodeProblems/: Leetcode.cpp
Notes/: Best practice C++.docx  C++ course.docx  DPs.docx  GOlang.docx  OOPs.docx  PopularLinuxCmnds.docx  QT Notes.docx  SOLID.docx
OOPs/: Abstract  Abstract.cpp  CovarientReturn.cpp  Destructor.cpp  Diamond.cpp  Diamond2  Diamond2.cpp  DynamicArray.cpp  Override.cpp  Rvalue.cpp  SMARTSharedPTR.cpp  SMARTuniqueIMPL.cpp  VECTOR_IMPL.cpp  VECTOR_emplace.cpp  assign.cpp  auto_ptr.cpp  auto_ptr_why_removed.cpp  callback_bind  callback_bind.cpp  casting.cpp  class.cpp  comp2.cpp  copy.cpp  fact.cpp  mallco.cpp  moveSemantics.cpp  moveconstr.cpp  movefunct.cpp  myUniq.cpp  objectSlicing.cpp  ownswap.cpp  postIncre++Pres.cpp  protected.cpp  shape.cpp  shared2.cpp  smart.cpp  string.cpp  swapping.cpp  test1.cpp  test2.cpp  (+2 more)
STL/: 2DVector.cpp  LLcycle.cpp  map.cpp  stackUsingqueue.cpp  stlAlgo.cpp  vec.cpp
StackOverflow/: Poly1  Poly1.cpp
Threading/: ProduceConsu.cpp  cv.cpp  diningPhilosopher.cpp  thread.cpp  threadPool.cpp  timedMutex.cpp
design_Patterns/: AbstractFactory.cpp  AbstractFactory.hpp  Adapter  Adapter.cpp  Adapter.hpp  ChainOfRespDiagHandles.cpp  Factory.cpp  Factory.hpp  Factory2.cpp  Factory2.hpp  Observer.cpp  Observer.h  Observer2  Observer2.cpp  Observer2.hpp  ObserverDiagn.cpp  Prototype.cpp  a.out  chainofres.cpp  chainofres.hpp  composite.cpp  composite.hpp  readme_dp.txt  strategy.cpp  temp  temp.cpp  (+1 more)
(+88 files in other folders)
